# Clinic-OS

./: .editorconfig  .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/config/: asgi.py  celery.py  urls.py
backend/config/settings/: base.py  dev.py  onprem.py  saas.py  test.py
backend/core/: admin.py  audit.py  consumers.py  db.py  entitlements.py  errors.py  middleware.py  models.py  pagination.py  permissions.py  rbac.py  routing.py  selectors.py  serializers.py  services.py  tasks.py  tenancy.py  urls.py  views.py  ws.py
backend/core/adapters/: __init__.py  base.py  mock.py
backend/core/management/commands/: ensure_audit_partitions.py  seed_demo.py
backend/core/migrations/: 0001_initial.py  0002_rls.py  0003_authsession_role_userrole_role_uniq_role_name_tenant_and_more.py  0004_rls_auth.py  0005_auditlog.py  0006_numbering_integrations.py  0007_rls_numbering_integrations.py
backend/core/tests/: factories.py  test_audit.py  test_auth.py  test_health.py  test_integrations.py  test_middleware.py  test_numbering.py  test_rbac.py  test_seed_demo.py  test_tenancy.py  test_ws.py
backend/requirements/: base.txt  dev.txt
deploy/: docker-compose.dev.yml
docs/: 00-PROJECT-BRIEF.md  01-SRS.md  02-ARCHITECTURE.md  03-DESIGN.md  04-USE-CASES.md
docs/adr/: 0001-react-19-and-oxlint.md  0002-rls-enforcement-roles.md  (+1 more)
frontend/: Dockerfile  components.json  index.html  orval.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
(+25 files in other folders)
